# inf443-project

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  README.md  imgui.ini
.gitignore/: .gitignore
src/: Animation.cpp  Animation.h  Character.cpp  Character.h  Game.cpp  Game.h  GameContext.cpp  GameContext.h  GameState.h  KroshLoader.cpp  KroshLoader.h  Models.cpp  Models.h  SceneContext.cpp  SceneContext.h  Terrain.cpp  Terrain.h  Timeline.cpp  Timeline.h  main.cpp  main_from_example.cpp
